syntax = "proto3";

package users;

option go_package = "./proto;users";

service Users {
	//1. 发送短信验证码
	rpc SendSms(Request) returns (Response) {}
	//2. 注册用户
	rpc Register(RegReq) returns (Response) {}
}
message RegReq {
	string mobile = 1;
	string password = 2;
	string sms_code = 3;
}
message Request {
	string phone = 1;
	string uuid =2;
	string imageCode = 3;
}

message Response {
	string errno = 1;
	string errmsg = 2;
}

